ajout d'un margin-bottom dans css

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 		</div>
 
 		<div class="blocImages">
+			<div class="image1">
+				rhrthrthrth
+			</div>
 			<img class="imageDeep" src="images/image-deep-earth.jpg">
 			<img class="imageNight" src="images/image-night-arcade.jpg">
 			<img class="imageSoccer" src="images/image-soccer-team.jpg">
@@ -53,7 +56,6 @@
 			<img class="pocket" src="images/image-pocket-borealis.jpg">
 			<img class="curiosity" src="images/image-curiosity.jpg">
 			<img class="fish" src="images/image-fisheye.jpg">
-		</div>
 		</div>
 	</div>
 
