ajout du texte sur les images

--- a/index.html
+++ b/index.html
@@ -45,17 +45,31 @@
 		</div>
 
 		<div class="blocImages">
-			<div class="image1">
-				rhrthrthrth
+
+			<div class="imageDeep"> 
+			<p class="texteDeep"> DEEP <br> EARTH </p>
 			</div>
-			<img class="imageDeep" src="images/image-deep-earth.jpg">
-			<img class="imageNight" src="images/image-night-arcade.jpg">
-			<img class="imageSoccer" src="images/image-soccer-team.jpg">
-			<img class="imageGrid" src="images/image-grid.jpg">
-			<img class="above" src="images/image-from-above.jpg">
-			<img class="pocket" src="images/image-pocket-borealis.jpg">
-			<img class="curiosity" src="images/image-curiosity.jpg">
-			<img class="fish" src="images/image-fisheye.jpg">
+			<div class="imageNight">
+			<p class="texteNight"> NIGHT <br> ARCADE </p>
+			</div>
+			<div class="imageSoccer">
+			<p class="texteSoccer"> SOCCER <br> TEAM VR </p>
+			</div>
+			<div class="imageGrid">
+			<p class="texteGrid"> THE <br> GRID </p>
+			</div>
+			<div class="imageAbove">
+			<p class="texteAbove"> FROM UP <br> ABOVE VR </p>
+			</div>
+			<div class="imagePocket">
+			<p class="textePocket"> POCKET <br> BOREALIS </p>
+			</div>
+			<div class="imageCuriosity">
+			<p class="texteCuriosity"> THE <br> CURIOSITY </p>
+			</div>
+			<img class="imageFish">
+			<p class="texteFish"> MAKE IT <br> FISHEYE </p>
+			</div>
 		</div>
 	</div>
 
@@ -78,6 +92,5 @@
 		</div>
 	</div>
 </div>
-<script type="exercice8.js"></script>
 </body>
 </html>
