ajout animation js, du bouton see all

--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 
 	<div class="header">
 		<div class="boutonHeader">
-			<span class="boutonAbout"> <a href="https://www.google.fr/"> About </span> </a>
-			<span class="boutonCareers"> <a href="https://www.google.fr/"> Careers </span> </a>
-			<span class="boutonEvents"> <a href="https://www.google.fr/"> Events </span> </a>
-			<span class="boutonProducts"> <a href="https://www.google.fr/"> Products </span> </a>
-			<span class="boutonSupport"> <a href="https://www.google.fr/"> Support </span> </a>
+			<span class="boutonAbout"> <a href="https://www.google.fr/"> About </a> </span>
+			<span class="boutonCareers"> <a href="https://www.google.fr/"> Careers  </a></span>
+			<span class="boutonEvents"> <a href="https://www.google.fr/"> Events  </a> </span>
+			<span class="boutonProducts"> <a href="https://www.google.fr/"> Products  </a> </span>
+			<span class="boutonSupport"> <a href="https://www.google.fr/"> Support  </a> </span>
 		</div>
+
 		<img class="logo1" src="images/logo.svg">
 		<div class="rectangle1">
-		<div class="texteHeader"> 
-			<span> IMMERSIVE </span> <br>
-			<span> EXPERIENCES </span> <br>
-			<span> THAT DELIVER </span>
+			<div class="texteHeader"> 
+				<span> IMMERSIVE </span> <br>
+				<span> EXPERIENCES </span> <br>
+				<span> THAT DELIVER </span>
+			</div>
 		</div>
 	</div>
 
@@ -39,6 +41,7 @@
 	<div class="ourCreations">
 		<div class="ligne1">
 			<span class="texteOurCreations"> OUR CREATIONS </span>
+
 			<div class="boutonSeeAll">
 				<span class="texteSeeAll"> SEE ALL </span>
 			</div>
@@ -67,11 +70,12 @@
 			<div class="imageCuriosity">
 			<p class="texteCuriosity"> THE <br> CURIOSITY </p>
 			</div>
-			<img class="imageFish">
+			<div class="imageFish">
 			<p class="texteFish"> MAKE IT <br> FISHEYE </p>
 			</div>
 		</div>
 	</div>
+
 
 	<div class="footer">
 		<div class="rectangleNoire">
@@ -91,6 +95,9 @@
 			</div>
 		</div>
 	</div>
+
 </div>
+
+<script src="exercice8.js"></script>
 </body>
 </html>
